--- a/styles.css
+++ b/styles.css
@@ -16,20 +16,25 @@ Li
   align-items: center;  
 }
 
-/*.taskInput{
-  display: block;
-} */
+.taskInput {
+  padding-block: 20px 20px ;
+}
+  
 
 .inputLabel{
   display: flex;
   flex-direction: column ;
-}
+} 
 
 
 .form {
     display: flex;
+    gap: 30px;
 }
 
+.taskButton {
+ 
+}
 
 
 
